--- a/ROS_ImageUtils/CompressedImageControl.xaml
+++ b/ROS_ImageUtils/CompressedImageControl.xaml
@@ -1,8 +1,12 @@
 ﻿<UserControl x:Class="ROS_ImageWPF.CompressedImageControl"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"        
+                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+                     mc:Ignorable="d" 
+                     d:DesignHeight="300" d:DesignWidth="300"
                       Loaded="UserControl_Loaded" SnapsToDevicePixels="True" SizeChanged="UserControl_SizeChanged" >
-    <Grid SnapsToDevicePixels="True">
+    <Grid SnapsToDevicePixels="True">        
         <Rectangle SnapsToDevicePixels="True" Stretch="Fill" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <ScaleTransform ScaleX="-1"></ScaleTransform>
@@ -11,5 +15,6 @@
                 <ImageBrush x:Name="image" />
             </Rectangle.Fill>
         </Rectangle>
+        <Canvas Name="ROI_Container" />
     </Grid>
 </UserControl>
