--- a/CameraSlidersUC/CSUC.xaml
+++ b/CameraSlidersUC/CSUC.xaml
@@ -51,9 +51,9 @@
                         <CheckBox Name="MC1_WBT_CB" Content="Auto" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="5" Grid.RowSpan="1" Checked="MC1_WBT_CB_Checked" Unchecked="MC1_WBT_CB_Unchecked"/>
                         <!--Focus-->
                         <Label Content="Focus" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1"/>
-                        <Slider Name="MC1_Foc_Sl" Height="30" Width="250" Minimum="2800" Maximum="6500" VerticalAlignment="Bottom" HorizontalAlignment="Left" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1"/>
+                        <Slider Name="MC1_Foc_Sl" Maximum="15" Minimum="0" Height="30" Width="250" VerticalAlignment="Bottom" HorizontalAlignment="Left" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1" ValueChanged="MC1_Foc_Sl_ValueChanged"/>
                         <Label Name="MC1_Foc_Lvl" Content="Level" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1" />
-                        <CheckBox Name="MC1_Foc_CB" Content="Auto" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="6" Grid.RowSpan="1"/>
+                        <CheckBox Name="MC1_Foc_CB" Content="Auto" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="6" Grid.RowSpan="1" Unchecked="MC1_Foc_CB_Unchecked" Checked="MC1_Foc_CB_Checked"/>
                     </Grid>
                 </Border>
             </TabItem>
@@ -101,9 +101,9 @@
                         <CheckBox Name="RC_WBT_CB" Content="Auto" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="5" Grid.RowSpan="1" Checked="RC_WBT_CB_Checked" Unchecked="RC_WBT_CB_Unchecked"/>
                         <!--Focus-->
                         <Label Content="Focus" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1"/>
-                        <Slider Name="RC_Foc_Sl" Height="30" Width="250" Minimum="2800" Maximum="6500" VerticalAlignment="Bottom" HorizontalAlignment="Left" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1"/>
+                        <Slider Name="RC_Foc_Sl" Height="30" Width="250" Minimum="0" Maximum="15" VerticalAlignment="Bottom" HorizontalAlignment="Left" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1" ValueChanged="RC_Foc_Sl_ValueChanged"/>
                         <Label Name="RC_Foc_Lvl" Content="Level" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1" />
-                        <CheckBox Name="RC_Foc_CB" Content="Auto" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="6" Grid.RowSpan="1"/>
+                        <CheckBox Name="RC_Foc_CB" Content="Auto" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="6" Grid.RowSpan="1" Checked="RC_Foc_CB_Checked" Unchecked="RC_Foc_CB_Unchecked"/>
                     </Grid>
                 </Border>
             </TabItem>
@@ -151,9 +151,9 @@
                         <CheckBox Name="MC3_WBT_CB" Content="Auto" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="5" Grid.RowSpan="1" Checked="MC3_WBT_CB_Checked" Unchecked="MC3_WBT_CB_Unchecked"/>
                         <!--Focus-->
                         <Label Content="Focus" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1"/>
-                        <Slider Name="MC3_Foc_Sl" Height="30" Width="250" Minimum="2800" Maximum="6500" VerticalAlignment="Bottom" HorizontalAlignment="Left" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1"/>
+                        <Slider Name="MC3_Foc_Sl" Height="30" Width="250" Minimum="0" Maximum="15" VerticalAlignment="Bottom" HorizontalAlignment="Left" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1" ValueChanged="MC3_Foc_Sl_ValueChanged"/>
                         <Label Name="MC3_Foc_Lvl" Content="Level" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1" />
-                        <CheckBox Name="MC3_Foc_CB" Content="Auto" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="6" Grid.RowSpan="1"/>
+                        <CheckBox Name="MC3_Foc_CB" Content="Auto" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="6" Grid.RowSpan="1" Checked="MC3_Foc_CB_Checked" Unchecked="MC3_Foc_CB_Unchecked"/>
                     </Grid>
                 </Border>
             </TabItem>
@@ -201,9 +201,9 @@
                         <CheckBox Name="MC4_WBT_CB" Content="Auto" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="5" Grid.RowSpan="1" Checked="MC4_WBT_CB_Checked" Unchecked="MC4_WBT_CB_Unchecked"/>
                         <!--Focus-->
                         <Label Content="Focus" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1"/>
-                        <Slider Name="MC4_Foc_Sl" Height="30" Width="250" Minimum="2800" Maximum="6500" VerticalAlignment="Bottom" HorizontalAlignment="Left" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1"/>
+                        <Slider Name="MC4_Foc_Sl" Height="30" Width="250" Minimum="0" Maximum="15" VerticalAlignment="Bottom" HorizontalAlignment="Left" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1" ValueChanged="MC4_Foc_Sl_ValueChanged"/>
                         <Label Name="MC4_Foc_Lvl" Content="Level" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="6" Grid.RowSpan="1" />
-                        <CheckBox Name="MC4_Foc_CB" Content="Auto" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="6" Grid.RowSpan="1"/>
+                        <CheckBox Name="MC4_Foc_CB" Content="Auto" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="6" Grid.RowSpan="1" Checked="MC4_Foc_CB_Checked" Unchecked="MC4_Foc_CB_Unchecked"/>
                     </Grid>
                 </Border>
             </TabItem>
