Rock counter mouse interaction

--- a/RockCounterUC/RockCounter.xaml
+++ b/RockCounterUC/RockCounter.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="113" d:DesignWidth="301">
-    <Grid Canvas.Left="1131" Canvas.Top="941">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
@@ -27,35 +27,35 @@
             </TextBlock.Effect></TextBlock>
         <TextBlock MinWidth="50" TextAlignment="Center" HorizontalAlignment="Stretch"  Grid.Column="0" Grid.Row="1" Name="RedCount" Text="0" FontSize="35" Foreground="White" />
         <!-- Orange counter -->
-        <Rectangle HorizontalAlignment="Stretch"  Grid.Column="1" Grid.Row="1" Name="OrangeRock" StrokeThickness="4" Stroke="Black" VerticalAlignment="Stretch" Fill="Orange" />
+        <Rectangle HorizontalAlignment="Stretch"  Grid.Column="1" Grid.Row="1" Name="OrangeRock" StrokeThickness="1" Stroke="Black" VerticalAlignment="Stretch" Fill="Orange" />
         <TextBlock MinWidth="50" TextAlignment="Center" HorizontalAlignment="Stretch"  Grid.Column="1" Grid.Row="1" Name="OrangeCountShadow" Text="0" VerticalAlignment="Stretch" FontSize="35" Foreground="Black">
             <TextBlock.Effect>
             <BlurEffect Radius="2.0" KernelType="Box" />
             </TextBlock.Effect></TextBlock>
         <TextBlock MinWidth="50" TextAlignment="Center" HorizontalAlignment="Stretch"  Grid.Column="1" Grid.Row="1" Name="OrangeCount" Text="0" VerticalAlignment="Stretch" FontSize="35" Foreground="White" />
         <!-- Yellow counter -->
-        <Rectangle HorizontalAlignment="Stretch"  Grid.Column="2" Grid.Row="1" Name="YellowRock" Stroke="Black" VerticalAlignment="Stretch" StrokeThickness="4"  Margin="0" Fill="Yellow" />
+        <Rectangle HorizontalAlignment="Stretch"  Grid.Column="2" Grid.Row="1" Name="YellowRock" Stroke="Black" VerticalAlignment="Stretch" StrokeThickness="1"  Margin="0" Fill="Yellow" />
         <TextBlock MinWidth="50" TextAlignment="Center" HorizontalAlignment="Stretch"  Grid.Column="2" Grid.Row="1" Name="YellowCountShadow" Text="0" VerticalAlignment="Stretch" FontSize="35" Foreground="Black">
             <TextBlock.Effect>
             <BlurEffect Radius="2.0" KernelType="Box" />
             </TextBlock.Effect></TextBlock>
         <TextBlock MinWidth="50" TextAlignment="Center" HorizontalAlignment="Stretch"  Grid.Column="2" Grid.Row="1" Name="YellowCount" Text="0" VerticalAlignment="Stretch" FontSize="35" Foreground="White" />
         <!-- Green counter -->
-        <Rectangle HorizontalAlignment="Stretch"  Grid.Column="3" Grid.Row="1" Name="GreenRock" Stroke="Black" VerticalAlignment="Stretch" StrokeThickness="4" Margin="0" Fill="Green" />
+        <Rectangle HorizontalAlignment="Stretch"  Grid.Column="3" Grid.Row="1" Name="GreenRock" Stroke="Black" VerticalAlignment="Stretch" StrokeThickness="1" Margin="0" Fill="Green" />
         <TextBlock MinWidth="50" TextAlignment="Center" HorizontalAlignment="Stretch"  Grid.Column="3" Grid.Row="1" Name="GreenCountShadow" Text="0" VerticalAlignment="Stretch" FontSize="35" Foreground="Black">
             <TextBlock.Effect>
             <BlurEffect Radius="2.0" KernelType="Box" />
             </TextBlock.Effect></TextBlock>
         <TextBlock MinWidth="50" TextAlignment="Center" HorizontalAlignment="Stretch" Grid.Column="3" Grid.Row="1" Name="GreenCount" Text="0" VerticalAlignment="Stretch" FontSize="35" Foreground="White" />
         <!-- Blue counter -->
-        <Rectangle HorizontalAlignment="Stretch"  Grid.Column="4" Grid.Row="1" Name="BlueRock" Stroke="Black" StrokeThickness="4" VerticalAlignment="Stretch" Margin="0" Fill="Blue" />
+        <Rectangle HorizontalAlignment="Stretch"  Grid.Column="4" Grid.Row="1" Name="BlueRock" Stroke="Black" StrokeThickness="1" VerticalAlignment="Stretch" Margin="0" Fill="Blue" />
         <TextBlock MinWidth="50" TextAlignment="Center" HorizontalAlignment="Stretch"  Grid.Column="4" Grid.Row="1" Name="BlueCountShadow" Text="0" VerticalAlignment="Stretch" FontSize="35" Foreground="Black">
             <TextBlock.Effect>
             <BlurEffect Radius="2.0" KernelType="Box" />
             </TextBlock.Effect></TextBlock>
         <TextBlock MinWidth="50" TextAlignment="Center" HorizontalAlignment="Stretch"  Grid.Column="4" Grid.Row="1" Name="BlueCount" Text="0" VerticalAlignment="Stretch" FontSize="35" Foreground="White" />
         <!-- Purple counter -->
-        <Rectangle HorizontalAlignment="Stretch"  Grid.Column="5" Grid.Row="1" Name="PurpleRock" Stroke="Black" StrokeThickness="4" VerticalAlignment="Stretch" Margin="0" Fill="Purple" />
+        <Rectangle HorizontalAlignment="Stretch"  Grid.Column="5" Grid.Row="1" Name="PurpleRock" Stroke="Black" StrokeThickness="1" VerticalAlignment="Stretch" Margin="0" Fill="Purple" />
         <TextBlock MinWidth="50" TextAlignment="Center" HorizontalAlignment="Stretch"  Grid.Column="5" Grid.Row="1" Name="PurpleCountShadow" Text="0" VerticalAlignment="Stretch" FontSize="35" Foreground="Black">
             <TextBlock.Effect>
             <BlurEffect Radius="2.0" KernelType="Box" />
@@ -69,5 +69,11 @@
         <TextBlock MinWidth="50" TextAlignment="Center" HorizontalAlignment="Center" Grid.Column="4" Grid.Row="0" Name="BlueTextBlock" Text="Blue" VerticalAlignment="Stretch"/>
         <TextBlock MinWidth="50" TextAlignment="Center" HorizontalAlignment="Center" Grid.Column="5" Grid.Row="0" Name="PurpleTextBlock" Text="Purple" VerticalAlignment="Stretch"/>
         <Button Name="Rock_Restorer" Content="Restore" Height="30" HorizontalAlignment="Center" Width="73" Click="Rock_Restorer_Click" Grid.Row="3" Grid.ColumnSpan="6" />
+        <Grid Name="region1" Grid.Column="0" Grid.RowSpan="2" MouseDown="UserControl_MouseDown" Background="#01000000" />
+        <Grid Name="region2" Grid.Column="1" Grid.RowSpan="2" MouseDown="UserControl_MouseDown" Background="#01000000"/>
+        <Grid Name="region3" Grid.Column="2" Grid.RowSpan="2" MouseDown="UserControl_MouseDown" Background="#01000000"/>
+        <Grid Name="region4" Grid.Column="3" Grid.RowSpan="2" MouseDown="UserControl_MouseDown" Background="#01000000"/>
+        <Grid Name="region5" Grid.Column="4" Grid.RowSpan="2" MouseDown="UserControl_MouseDown" Background="#01000000"/>
+        <Grid Name="region6" Grid.Column="5" Grid.RowSpan="2" MouseDown="UserControl_MouseDown" Background="#01000000"/>
     </Grid>
 </UserControl>
