--- a/TiltSliderUC/TSUC.xaml
+++ b/TiltSliderUC/TSUC.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="100" Background="White">
+             d:DesignHeight="300" d:DesignWidth="100" Background="White" Loaded="UserControl_Loaded">
     <Border BorderBrush="Black" BorderThickness="1">
         <Grid Height="300">
             <Label Content="Tilt" FontSize="16" VerticalAlignment="Top" HorizontalAlignment="Center"/>
